# pyoomph

./: .gitignore  .readthedocs.yaml  COPYING  INSTALL.md  MANIFEST.in  Mac_arm64_with_Pardiso.md  README.md  build_for_develop.sh  clean.sh  install.sh  installOnArm.sh  prebuild.sh  pyoomph_config.env  pyproject.toml  setup.py
.github/workflows/: run_pytest.yml  wheels.yml
_pyoomph-stubs/: __init__.pyi
citools/: MakefileMSYS2  before_build_linux.sh  compile_win_wheels_msys2.sh  download_and_build_static_ginac.sh  find_mkl.py  pyoomph_config_linuxwheel.env  pyoomph_config_macwheel.env  pyoomph_config_windows_cross.env  test_all_tutorial_scripts.py  test_all_tutorial_scripts.sh
docs/: requirements.txt
docs/source/: _pyoomph.rst  conf.py  index.rst  latex_tutorial.rst  pyoomph.equations.ALE.rst  pyoomph.equations.NSCH.rst  pyoomph.equations.SUPG.rst  pyoomph.equations.advection_diffusion.rst  pyoomph.equations.cahn_hilliard.rst  pyoomph.equations.contact_angle.rst  pyoomph.equations.darcy.rst  pyoomph.equations.generic.rst  pyoomph.equations.harmonic_oscillator.rst  pyoomph.equations.helmholtz.rst  pyoomph.equations.kuramoto_sivashinsky.rst  pyoomph.equations.linear_elasticity.rst  pyoomph.equations.low_order_NSCH.rst  pyoomph.equations.lubrication.rst  pyoomph.equations.multi_component.rst  pyoomph.equations.navier_stokes.rst  pyoomph.equations.ode.rst  pyoomph.equations.poisson.rst  pyoomph.equations.potential_flow.rst  pyoomph.equations.rst  pyoomph.equations.solid.rst  pyoomph.equations.stokes_stream_func.rst  pyoomph.equations.topological_changes.rst  pyoomph.equations.tracers.rst  pyoomph.expressions.cb.rst  pyoomph.expressions.coordsys.rst  pyoomph.expressions.generic.rst  pyoomph.expressions.interpol.rst  pyoomph.expressions.phys_consts.rst  pyoomph.expressions.rst  pyoomph.expressions.tensor_funcs.rst  pyoomph.expressions.units.rst  pyoomph.expressions.utils.rst  pyoomph.generic.assembly.rst  pyoomph.generic.ccompiler.rst  pyoomph.generic.codegen.rst  (+51 more)
pyoomph/: __init__.py  __main__.py  logging.py
pyoomph/equations/: ALE.py  NSCH.py  SUPG.py  __init__.py  advection_diffusion.py  cahn_hilliard.py  contact_angle.py  darcy.py  generic.py  harmonic_oscillator.py  helmholtz.py  kuramoto_sivashinsky.py  linear_elasticity.py  low_order_NSCH.py  lubrication.py  multi_component.py  navier_stokes.py  ode.py  poisson.py  potential_flow.py  solid.py  stokes_stream_func.py  topological_changes.py  tracers.py
pyoomph/expressions/: __init__.py  cb.py  coordsys.py  generic.py  interpol.py  phys_consts.py  tensor_funcs.py  units.py  utils.py  vtu_interpol.py
pyoomph/generic/: __init__.py  assembly.py  bifurcation_tools.py  ccompiler.py  codegen.py  logging.py  mpi.py  problem.py
pyoomph/jitbridge/: NOTE_FOR_WINDOWS.txt  __init__.py  jitbridge.h  jitbridge_hang.h  jitbridge_nohang.h
pyoomph/materials/: __init__.py  activity.py  default_materials.py  generic.py  mass_transfer.py  surfactant_isotherms.py
pyoomph/meshes/: PFEM.py  __init__.py  bcs.py  curved_entities.py  droplet_meshes.py  gmsh.py  interpolator.py  mesh.py  meshdatacache.py  remesher.py  simplemeshes.py  zeta.py
pyoomph/output/: generic.py  latex.py  meshio.py  plotting.py  plotting3d.py  states.py
pyoomph/paraview/: pyoomph_eigen_extrusion_filter.py
pyoomph/solvers/: __init__.py  cktso.py  generic.py  load_solver_from_cmd_line.py  mumps.py  pardiso.py  petsc.py  precice_adapter.py  scipy.py
pyoomph/typings/: __init__.py
src/: Makefile  Tmacroelements.hpp  bifurcation.cpp  bifurcation.hpp  ccompiler.cpp  ccompiler.hpp  codegen.cpp  codegen.hpp  elements.cpp  elements.hpp  exception.cpp  exception.hpp  expressions.cpp  expressions.hpp  ginac.hpp  hessian_tensor.cpp  hessian_tensor.hpp  jitbridge.h  jitbridge_hang.h  jitbridge_nohang.h  kdtree.cpp  kdtree.hpp  lagr_error_estimator.cpp  lagr_error_estimator.hpp  logging.cpp  logging.hpp  mesh.cpp  mesh.hpp  mesh1d.cpp  mesh1d.hpp  mesh2d.cpp  mesh2d.hpp  mesh3d.cpp  mesh3d.hpp  meshtemplate.cpp  meshtemplate.hpp  missing_masters.hpp  nodes.cpp  nodes.hpp  oomph_lib.hpp  (+11 more)
tests/: README.md  test_adaptivity.py  test_compilers.py  test_installationArm.py  test_linear_response.py  test_stokes.py
(+375 files in other folders)
